:wrench: chore(templates): 이슈 템플릿에 공지/완료보고 항목 추가
- 📢 공지 또는 완료 보고용 템플릿(notice.yml) 신규 추가
- 기존 config.yml에 notice 템플릿 항목 등록
- 라벨: notice 를 자동 부착되도록 설정

깃허브 이슈를 통해 작업 완료 공유 및 공지용으로 활용 가능

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -9,3 +9,8 @@ issue_templates:
     description: 규칙, 일정, 운영 방식 등에 대한 제안이 있다면 남겨주세요.
     labels: [suggestion]
     template: suggestion.yml
+
+  - name: 📢 공지 또는 완료 보고
+    description: 진행 상황을 알리거나 공유할 내용이 있다면 사용해주세요.
+    labels: [notice]
+    template: notice.yml
