:see_no_evil: chore(gitignore): 빌드/산출물 및 생성 스크립트 산출물 무시 규칙 보강
- out/, tests/, run.sh 추가 무시
- main.exe, *.exe, *.class, *.o, *.pyc, __pycache__/ 등 빌드 산출물 무시 유지
- build.sh, input.txt, *.log 무시 유지
- IDE/OS 잡파일(.vscode/, .idea/, .DS_Store, Thumbs.db 등) 유지

--- a/.gitignore
+++ b/.gitignore
@@ -2,30 +2,37 @@
 .vscode/
 .idea/
 
-# Build / Exec
+# Build / Exec (generated artifacts)
+main
 main.exe
 *.exe
+a.out
 *.out
 *.class
 *.o
-*.pyc
+*.obj
+*.dll
+*.so
+*.dylib
 __pycache__/
+*.pyc
 out/
+.javac-cache/
 
-# Input/Output
+# Problem workspace artifacts (avoid merge conflicts)
+tests/
 input.txt
 output.txt
-*.log
-
-# Script
-build.sh
 run.sh
+build.sh
+
+# Logs
+*.log
 
 # System / Temp
 .DS_Store
 Thumbs.db
 *~
 *.swp
-
-# Java Build Output
-out/
+*.tmp
+*.pick
