--- a/.github/workflows/update-study.yml
+++ b/.github/workflows/update-study.yml
@@ -1,32 +1,49 @@
 name: Update Study Dashboards
+
 on:
   schedule:
-    - cron: "0 3 * * *" # 매일 03:00 KST
+    - cron: "0 18 * * *"   # 매일 03:00 KST (UTC+9)
   workflow_dispatch: {}
+
 permissions:
   contents: write
   pull-requests: write
+
 concurrency:
   group: update-study
   cancel-in-progress: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          persist-credentials: false   # GITHUB_TOKEN 자격증명 비활성화 (PAT 쓸 예정)
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
           pip install requests pyyaml
+
       - name: Build dashboards
         run: python scripts/build_dashboard.py
-      - name: Commit & Push if changed
+
+      - name: Commit & Push if changed (via PAT)
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "🔄 docs: auto-update week tables & root dashboard"
           file_pattern: |
             README.md
             problems/**/README.md
+          branch: main
+          token: ${{ secrets.BOT_PAT }}     # ← Fine-grained PAT (skala-bot)
+          commit_user_name: skala-bot
+          commit_user_email: skala-bot@example.com
