--- a/.github/workflows/update-study.yml
+++ b/.github/workflows/update-study.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          persist-credentials: false   # GITHUB_TOKEN 자격증명 비활성화 (PAT 쓸 예정)
+          persist-credentials: false   # GITHUB_TOKEN 대신 PAT을 쓸 것이므로 false
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -40,10 +40,10 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "🔄 docs: auto-update week tables & root dashboard"
+          branch: main
+          repository: https://x-access-token:${{ secrets.BOT_PAT }}@github.com/skala-alss/alss-log.git
           file_pattern: |
             README.md
             problems/**/README.md
-          branch: main
-          token: ${{ secrets.BOT_PAT }}     # ← Fine-grained PAT (skala-bot)
           commit_user_name: skala-bot
           commit_user_email: skala-bot@example.com
