✨ feat(scripts, dashboard): repo 기반 DURING/PRE·전브랜치 스캔·제출주차 누적추세
- week{XX}/README.md: 멤버 열(#1~#N)만 패치하도록 변경 (빈칸 우선, ALSS_OVERWRITE=1 시 전체 덮어쓰기)
- DURING/PRE 규칙 전환:
  - DURING(✅): solved.ac에 푼 문제 + 리포지토리(메인/모든 브랜치/리모트) 내 멤버 파일 존재
  - PRE(☑️): solved.ac에 푼 문제 + 리포지토리에 멤버 파일 없음
  - NONE(❌): solved.ac에 기록 없음
- 파일 소유자 판정 강화:
  - 문제 폴더 내부: {member}.*, {member}_*, {member}-* 매칭 (대소문자 무시, 공백/언더/하이픈 동치)
  - 과거 규칙 지원: week 루트의 `boj_{pid}_{member}.ext`
  - 허용 확장자 기본 세트(.cpp/.py/.java/...) 인식
- 전 브랜치 탐색: refs/heads/* + refs/remotes/* 전체 스캔 (ALSS_CHECK_BRANCHES=1 기본)
- 루트 README 대시보드:
  - 주차별 완료율·리더보드: 배정 문제 세트 기준, PRE/DURING 모두 ‘해결’로 집계
  - 멤버별 주차별 누적 추세: 제출 주차 귀속(우선순위: squash 커밋 제목 `submit: weekXX-{name}` → 브랜치명 `weekXX-{name}` → 배정 주차 폴백)
- 환경변수:
  - ALSS_OVERWRITE=1     # 멤버 칸 전체 덮어쓰기
  - ALSS_CHECK_BRANCHES=1 # 모든 브랜치/리모트 스캔(기본 1)
  - ALSS_DEBUG=1          # 디버그 로그
- 실행 전 권장: `git fetch --all --prune --depth=1`

BREAKING CHANGE:
- participants.yaml에 `file_key`, `branch_key` 추가 필요(없으면 name→github로 폴백)
- weeks.yaml의 `released_at` 더 이상 사용하지 않음
- 기존 PRE/DURING ‘시간 기반’ 정의 → ‘repo 기반’ 정의로 변경

--- a/.github/workflows/update-study.yml
+++ b/.github/workflows/update-study.yml
@@ -2,7 +2,7 @@ name: Update Study Dashboards
 
 on:
   schedule:
-    - cron: "0 18 * * *"   # 매일 03:00 KST (UTC+9)
+    - cron: "0 18 * * *" # 매일 03:00 KST (UTC+9) = 18:00 UTC
   workflow_dispatch: {}
 
 permissions:
@@ -20,8 +20,16 @@ jobs:
       - name: Checkout with BOT PAT
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
-          token: ${{ secrets.BOT_PAT }}   # ✅ PAT로 클론 & push 인증 일원화
+          fetch-depth: 0 # 전체 히스토리
+          token: ${{ secrets.BOT_PAT }} # PAT 인증
+
+      # 👇 새로 추가: 리모트/브랜치 레퍼런스 확실히 확보
+      - name: Fetch all branches & tags
+        run: |
+          git config --global advice.detachedHead false
+          git fetch --all --prune --tags
+          # 원격 트래킹 브랜치 확인 로그(디버그)
+          git branch -r || true
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -31,10 +39,16 @@ jobs:
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          pip install requests pyyaml
+          pip install requests PyYAML
 
       - name: Build dashboards
-        run: python scripts/build_dashboard.py
+        env:
+          # 스크립트 동작 플래그 (원하는대로 조절)
+          ALSS_CHECK_BRANCHES: "1" # 모든 브랜치/리모트 스캔
+          ALSS_OVERWRITE: "0" # 멤버 칼럼 빈칸만 채움(전체 덮어쓰려면 1)
+          ALSS_DEBUG: "0" # 디버그 로그 (필요시 1)
+        run: |
+          python scripts/build_dashboard.py
 
       - name: Commit & Push if changed (auto)
         uses: stefanzweifel/git-auto-commit-action@v5
@@ -46,4 +60,4 @@ jobs:
             problems/**/README.md
           commit_user_name: skala-bot
           commit_user_email: skalabot16@gmail.com
-          commit_author: "skala-bot <skalabot16@gmail.com>"  # Author도 봇으로 고정
+          commit_author: "skala-bot <skalabot16@gmail.com>"
