:compass: feat(dashboard): repo-전역 DURING/PRE + PR/브랜치 기반 누적 추세(폴백 옵션)
- Week README: 멤버 열만 갱신, DURING/PRE=solved.ac + repo(problems/ 전역, 모든 브랜치/리모트) 파일 탐지
- 파일 소유자 매칭: boj_{pid}, {name}_{pid}(_N)? 경로 전체 토큰으로 커버
- Root README: 제출 주차 귀속 = squash 커밋 제목 → 브랜치명 (ALSS_TREND_FALLBACK_DURING=1 시 DURING을 배정 주차로 귀속)
- git main ref 안전 판별, 디버그 로그 강화

--- a/.github/workflows/update-study.yml
+++ b/.github/workflows/update-study.yml
@@ -2,7 +2,7 @@ name: Update Study Dashboards
 
 on:
   schedule:
-    - cron: "0 18 * * *"   # 매일 03:00 KST (UTC+9)
+    - cron: "0 18 * * *" # 매일 03:00 KST (UTC+9)
   workflow_dispatch: {}
 
 permissions:
@@ -44,9 +44,10 @@ jobs:
       # 👇 이 스텝에서만 ALSS_* 전부 "1"로 강제
       - name: Build dashboards
         env:
-          ALSS_CHECK_BRANCHES: "1"  # 모든 브랜치/리모트 스캔
-          ALSS_OVERWRITE: "1"       # 멤버 칼럼 전체 덮어쓰기(원하면 "0"로 조절)
-          ALSS_DEBUG: "1"           # 디버그 로그 활성화
+          ALSS_CHECK_BRANCHES: "1"
+          ALSS_OVERWRITE: "1" # 안정화 후 0으로 전환 권장
+          ALSS_DEBUG: "1"
+          ALSS_TREND_FALLBACK_DURING: "0" # 정확도 우선, 원하면 "1"로
         run: |
           python scripts/build_dashboard.py
 
