--- a/.github/workflows/update-study.yml
+++ b/.github/workflows/update-study.yml
@@ -27,9 +27,13 @@ jobs:
       # 리모트/브랜치 트리 확보 (브랜치/PR 커밋 탐색 정확도 ↑)
       - name: Fetch all branches & tags
         run: |
-          git config --global advice.detachedHead false
-          git fetch --all --prune --tags
+          git remote set-url origin https://x-access-token:${{ secrets.BOT_PAT }}@github.com/${{ github.repository }}.git
+          git fetch origin +refs/heads/*:refs/remotes/origin/* --prune --depth=0
+          git fetch --tags --force
+          echo "--- branches (remote) ---"
           git branch -r || true
+          echo "--- recent log (HEAD) ---"
+          git log --oneline --decorate --max-count=20 || true
 
       - name: Set up Python
         uses: actions/setup-python@v5
