:sparkles: feat(scripts): DURING-only 집계로 루트 표 정렬 + 제출 주차 귀속에 diff 적용
- Root README #1, #2: DURING만 집계(☑ PRE는 표시에만 사용)
- Root README #3: 미병합 브랜치는 `git diff main...<branch>` 변경 파일만 제출로 간주
- 병합된 PR은 "submit: weekNN-<alias>" 커밋의 변경 파일로 귀속
- 둘 다 존재 시 ✅만 노출(기존 로직 유지), PRE 아이콘은 ☑
- released_at 비사용 명시(로직에서 제외)

--- a/.github/workflows/update-study.yml
+++ b/.github/workflows/update-study.yml
@@ -36,6 +36,8 @@ jobs:
           # 원격 모든 브랜치를 로컬 remote-tracking으로 동기화
           git fetch --prune --tags
           git fetch origin '+refs/heads/*:refs/remotes/origin/*' --prune
+          # (추가) 포크 PR 헤드도 remote-tracking으로 확보 → DURING 판정에 긍정적
+          git fetch origin '+refs/pull/*/head:refs/remotes/origin/pr/*' --prune
 
           echo '--- remote branches (head 100) ---'
           git branch -r | sed -n '1,100p' || true
