:bug: fix(dashboard): submission 귀속 정확도 개선 (최신 커밋 우선) + 더미 주차 폴백 차단
- commit 스캔: 모든 main refs에서 submit 커밋 수집, sha 중복 제거, ts 기준 최신순 정렬

- 귀속 우선순위: seat/pid는 '최신 커밋'의 week 라벨을 최초 1회만 채택(older가 덮어쓰지 않음)

- fallback 가드: groups 없는 더미 주차에는 DURING 폴백 귀속 금지

- README 경로 가드 강화: path 빈값/디렉터리일 때 안전 스킵(isfile 체크)

- CI: 기본값으로 DURING 폴백 비활성화(ALSS_TREND_FALLBACK_DURING=0)로 오귀속 예방

--- a/.github/workflows/update-study.yml
+++ b/.github/workflows/update-study.yml
@@ -67,7 +67,8 @@ jobs:
           ALSS_CHECK_BRANCHES: "1"
           ALSS_OVERWRITE: "1"
           ALSS_DEBUG: "1"
-          ALSS_TREND_FALLBACK_DURING: "1"
+          # 더미 주차가 있을 때 오귀속 방지. 필요시 수동으로 "1"로 켜세요.
+          ALSS_TREND_FALLBACK_DURING: "0"
           ALSS_LOG_LIMIT: "0"
         run: |
           python scripts/build_dashboard.py
