🔧 ci(workflow): render 잡에서 최신 main 동기화로 non-FF push 방지
- build 잡 커밋 이후 render 잡 push 시 발생하던 non-fast-forward 오류 해결
- render 단계에서 `git checkout -B main origin/main`으로 최신 main 동기화
- 이후 SVG 생성 커밋을 최신 main 위에 안전하게 푸시

--- a/.github/workflows/update-study.yml
+++ b/.github/workflows/update-study.yml
@@ -156,6 +156,11 @@ jobs:
         run: |
           python scripts/render_svg.py data/dashboard.json assets/
 
+      - name: Sync to latest main
+        run: |
+          git fetch origin main
+          git checkout -B main origin/main   # 현재 워킹 트리를 최신 main으로 맞춤
+
       - name: Commit & Push SVGs
         run: |
           git add assets/*.svg || true
