--- a/.github/workflows/update-study.yml
+++ b/.github/workflows/update-study.yml
@@ -102,24 +102,45 @@ jobs:
             echo "(no changes in config/weeks.yaml)"
           fi
 
-      # 6) README/주차README + weeks.yaml + .gitkeep 커밋/푸시
-      - name: Commit & Push changes
+      - name: Sync to latest main (pre-build)
         run: |
-          # 스테이징: 루트/주차 README, weeks.yaml, 모든 .gitkeep
+          git fetch origin main
+          git checkout -B main origin/main
+
+      # 6) README/주차README + weeks.yaml + .gitkeep 커밋/푸시
+      - name: Commit & Push changes (rebase & retry)
+        run: |
+          # 스테이징
           git add -- README.md ':(glob)**/README.md' config/weeks.yaml ':(glob)**/.gitkeep' || true
           git add -u -- README.md ':(glob)**/README.md' config/weeks.yaml ':(glob)**/.gitkeep' || true
 
           echo "=== staged files (name-only) ==="
           git --no-pager diff --cached --name-only || true
 
-          if ! git diff --cached --quiet; then
-            git config user.name  "skala-bot"
-            git config user.email "skalabot16@gmail.com"
-            git commit -m "🧰 build: sync weeks.yaml, create folders/.gitkeep, and refresh dashboards"
-            git push origin HEAD:main
-          else
+          if git diff --cached --quiet; then
             echo "No changes to commit."
+            exit 0
           fi
+
+          git config user.name  "skala-bot"
+          git config user.email "skalabot16@gmail.com"
+          git commit -m "🧰 build: sync weeks.yaml, create folders/.gitkeep, and refresh dashboards"
+
+          # non-FF 방지: 원격 main에 재배치 후 푸시 (최대 3회 재시도)
+          for attempt in 1 2 3; do
+            git fetch origin main
+            if git pull --rebase origin main && git push origin HEAD:main; then
+              echo "Pushed on attempt $attempt"
+              exit 0
+            fi
+            echo "Push failed (attempt $attempt). Retrying..."
+            # rebase 실패 시 중단 복구
+            git rebase --abort || true
+            sleep $((attempt*2))
+          done
+
+          echo "Failed to push after retries."
+          exit 1
 
       # 실패 시 추가 디버그
       - name: Debug on failure
@@ -161,14 +182,28 @@ jobs:
           git fetch origin main
           git checkout -B main origin/main   # 현재 워킹 트리를 최신 main으로 맞춤
 
-      - name: Commit & Push SVGs
+      - name: Commit & Push SVGs (rebase & retry)
         run: |
           git add assets/*.svg || true
-          if ! git diff --cached --quiet; then
-            git config user.name  "skala-bot"
-            git config user.email "skalabot16@gmail.com"
-            git commit -m "🎨 build(svg): update animated study dashboards"
-            git push origin HEAD:main
-          else
+          if git diff --cached --quiet; then
             echo "No SVG changes to commit."
+            exit 0
           fi
+
+          git config user.name  "skala-bot"
+          git config user.email "skalabot16@gmail.com"
+          git commit -m "🎨 build(svg): update animated study dashboards"
+
+          for attempt in 1 2 3; do
+            git fetch origin main
+            if git pull --rebase origin main && git push origin HEAD:main; then
+              echo "Pushed on attempt $attempt"
+              exit 0
+            fi
+            echo "Push failed (attempt $attempt). Retrying..."
+            git rebase --abort || true
+            sleep $((attempt*2))
+          done
+
+          echo "Failed to push after retries."
+          exit 1
