--- a/.github/workflows/update-study.yml
+++ b/.github/workflows/update-study.yml
@@ -3,7 +3,16 @@ name: Update Study Dashboards
 on:
   schedule:
     - cron: "0 18 * * *" # 매일 03:00 KST (UTC+9)
-  workflow_dispatch: {}
+  workflow_dispatch:
+    inputs:
+      mode:
+        description: "Run mode (full: build+render, render-only: SVG만 갱신)"
+        type: choice
+        required: true
+        default: full
+        options:
+          - full
+          - render-only
 
 permissions:
   contents: write
@@ -14,7 +23,12 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  # =========================
+  # 1) BUILD (JSON 생성/커밋)
+  # - full 모드 및 스케줄에서만 수행
+  # =========================
   build:
+    if: ${{ github.event_name != 'workflow_dispatch' || inputs.mode != 'render-only' }}
     runs-on: ubuntu-latest
 
     steps:
@@ -65,8 +79,8 @@ jobs:
             --weeks-yaml config/weeks.yaml \
             -v
 
-      # 5) 대시보드 빌드 (weeks.yaml 기준)
-      - name: Build dashboards
+      # 5) 대시보드 빌드 (weeks.yaml 기준) → data/dashboard.json 생성
+      - name: Build dashboards (emit JSON)
         env:
           ALSS_CHECK_BRANCHES: "1"
           ALSS_OVERWRITE: "1"
@@ -75,8 +89,9 @@ jobs:
           ALSS_LOG_LIMIT: "0"
         run: |
           python scripts/build_dashboard.py
+          test -f data/dashboard.json || (echo "data/dashboard.json not created" && exit 1)
 
-      # 5.1) 집계 결과 JSON으로 저장
+      # 5.1) 집계 결과 JSON artifact 업로드
       - name: Upload dashboard JSON (artifact)
         uses: actions/upload-artifact@v4
         with:
@@ -105,12 +120,12 @@ jobs:
             echo "(no changes in config/weeks.yaml)"
           fi
 
-      # 6) README/주차README + weeks.yaml + .gitkeep 커밋/푸시 (rebase & retry)
+      # 6) README/주차README + weeks.yaml + .gitkeep + 🔵 dashboard.json 커밋/푸시
       - name: Commit & Push changes (rebase & retry)
         run: |
-          # 스테이징
-          git add -- README.md ':(glob)**/README.md' config/weeks.yaml ':(glob)**/.gitkeep' || true
-          git add -u -- README.md ':(glob)**/README.md' config/weeks.yaml ':(glob)**/.gitkeep' || true
+          # 스테이징 (JSON 포함)
+          git add -- README.md ':(glob)**/README.md' config/weeks.yaml ':(glob)**/.gitkeep' data/dashboard.json || true
+          git add -u -- README.md ':(glob)**/README.md' config/weeks.yaml ':(glob)**/.gitkeep' data/dashboard.json || true
 
           echo "=== staged files (name-only) ==="
           git --no-pager diff --cached --name-only || true
@@ -122,7 +137,7 @@ jobs:
 
           git config user.name  "skala-bot"
           git config user.email "skalabot16@gmail.com"
-          git commit -m "🧰 build: sync weeks.yaml, create folders/.gitkeep, and refresh dashboards"
+          git commit -m "🧰 build: sync weeks.yaml, create folders/.gitkeep, refresh dashboards, and commit data/dashboard.json"
 
           # non-FF 방지: 원격 main에 재배치 후 푸시 (최대 3회 재시도)
           for attempt in 1 2 3; do
@@ -148,9 +163,15 @@ jobs:
           echo '--- show refs snapshot ---'
           git for-each-ref --format='%(refname:short)' | sed -n '1,200p' || true
 
+  # =========================
+  # 2) RENDER (full 모드)
+  # - build 산출물 artifact 사용
+  # - build 성공 시에만 실행
+  # =========================
   render:
-    runs-on: ubuntu-latest
+    if: ${{ github.event_name != 'workflow_dispatch' || inputs.mode != 'render-only' }}
     needs: build
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout with BOT PAT
@@ -170,7 +191,7 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Download dashboard JSON
+      - name: Download dashboard JSON (artifact from build)
         uses: actions/download-artifact@v4
         with:
           name: dashboard-json
@@ -191,6 +212,66 @@ jobs:
           git config user.name  "skala-bot"
           git config user.email "skalabot16@gmail.com"
           git commit -m "🎨 build(svg): update animated study dashboards"
+
+          for attempt in 1 2 3; do
+            git fetch origin main
+            if git pull --rebase origin main && git push origin HEAD:main; then
+              echo "Pushed on attempt $attempt"
+              exit 0
+            fi
+            echo "Push failed (attempt $attempt). Retrying..."
+            git rebase --abort || true
+            sleep $((attempt*2))
+          done
+
+          echo "Failed to push after retries."
+          exit 1
+
+  # =========================
+  # 3) RENDER-ONLY (bypass)
+  # - 수동 실행(workflow_dispatch) + inputs.mode == render-only
+  # - repo 커밋된 data/dashboard.json 사용
+  # =========================
+  render_only:
+    if: ${{ github.event_name == 'workflow_dispatch' && inputs.mode == 'render-only' }}
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout with BOT PAT
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.BOT_PAT }}
+
+      - name: Sync to latest main
+        run: |
+          git fetch origin main
+          git checkout -B main origin/main
+
+      - name: Ensure JSON exists
+        run: |
+          test -f data/dashboard.json || (echo "::error::data/dashboard.json not found on main. Run full pipeline first." && exit 1)
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Render animated SVGs (render-only mode)
+        run: |
+          python scripts/render_svg.py data/dashboard.json assets/
+
+      - name: Commit & Push SVGs (rebase & retry)
+        run: |
+          git add assets/*.svg || true
+          if git diff --cached --quiet; then
+            echo "No SVG changes to commit."
+            exit 0
+          fi
+
+          git config user.name  "skala-bot"
+          git config user.email "skalabot16@gmail.com"
+          git commit -m "🎨 build(svg): render-only update from committed dashboard.json"
 
           for attempt in 1 2 3; do
             git fetch origin main
